Fixed alignment for various blocks, closes #17

--- a/frontend/styles/text.styl
+++ b/frontend/styles/text.styl
@@ -81,3 +81,20 @@
       padding 5px 10px
       border 1px solid #e1e1e1
 
+  .h-left
+    display block
+    text-align start
+    float left
+    padding 0.25em 0.5em 0.25em 0
+
+  .h-center
+    display block
+    text-align center
+    float none
+    padding 0.25em 0 0.25em 0
+
+  .h-right
+    display block
+    text-align right
+    float right
+    padding: 0.25em 0 0.25em 0.5em
